# sins-love-and-rainbows

./: .gitignore  .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml
.github/workflows/: deploy.yaml
server_setup/: celery-beat-slr.service  celery-slr.service  celery.service  server_setup.sh  sinsloveandrainbows.eu  sinsloveandrainbows.service  sinsloveandrainbows.socket
src/: manage.py  playground.py
src/api/: admin.py  api.py  apps.py  auth.py  messages.py  middleware.py  models.py  schema.py  settings.py  shorturl_controller.py  signals.py  slr_controller.py  tasks.py  twilio_controller.py  unrelated.py
src/api/migrations/: 0001_initial.py  0002_alter_ingredient_items_alter_invite_status.py  0003_alter_person_password.py  0004_message_title_alter_invite_status_and_more.py  0005_remove_externallink_party_remove_partyfile_party_and_more.py  0006_apiclient.py  0007_alter_apiclient_options_and_more.py  0008_remove_allergy_people_allergy_person_and_more.py  0009_alter_allergy_person.py  0010_ingredient_allergic_people_party_max_people_and_more.py  0011_alter_item_description_alter_item_name_and_more.py  0012_item_created_by.py  0013_invite_show_in_guest_list.py  0014_party_private.py  0015_remove_message_sent_at_remove_message_sent_to_and_more.py  0016_personallinksent.py  0017_personallinksent_status.py  0018_alter_partyfile_name.py  0019_alter_partyfile_name.py  0020_alter_party_name.py  0021_preferences.py  0022_alter_preferences_options_alter_person_phone_number.py  0023_auto_20231219_1330.py  0024_auto_20231219_1346.py  0025_messagesent_alter_personallinksent_index_together_and_more.py  0026_alter_message_options_alter_message_text.py  0027_alter_message_text.py  0028_message_send_threshold.py  0029_alter_message_index_together_message_autosend_and_more.py  0030_messagetemplate.py  0031_messagetemplate_sid.py  0032_messagetemplate_approved.py  0033_messagetemplate_is_default_party_message.py  0034_messagetemplate_category.py  0035_messagetemplate_rejected_and_more.py  0036_remove_messagetemplate_approved_and_more.py  0037_messagetemplate_send_delta.py  (+4 more)
src/sinsloveandrainbows/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/slrportal/: apps.py  auth_backend.py  auth_middleware.py  forms.py  notifications.py  urls.py  views.py
src/templates/: 404.html  base.html
src/tests/: conftest.py
(+35 files in other folders)
