[tool.poetry]
name = "sins-love-and-rainbows"
version = "0.1.0"
description = "Personal party management app"
authors = ["Biagio Distefano <biagiodistefano92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
django-ninja = "^1.0.1"
django-ninja-extra = "^0.20.0"
uvicorn = "^0.24.0.post1"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
django-cors-headers = "^4.3.1"
python-decouple = "^3.8"
django-ninja-jwt = "^5.2.10"
django-markdownfield = "^0.11.0"
pillow = "^10.1.0"
wasabi = "^1.1.2"
celery = "^5.3.6"
twilio = "^8.11.0"
redis = "^5.0.1"
django-celery-beat = "^2.5.0"
python-dateutil = "^2.8.2"
pre-commit = "^3.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-django = "^4.7.0"
ruff = "^0.1.6"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sinsloveandrainbows.settings"


[tool.coverage.html]
# skip_covered = true
skip_empty = true

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "I", "W"]
ignore = ["I001"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "playground.py",
    "*/migrations/*"
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
